v1.013 files issue fixed